@@ -1,1 +1,8 @@
 # GC-analysis
+
+
+# Enable GC logs
+
+add the following to JVM system properties
+
+-Xloggc:${PATH}/gc.log -XX:+PrintGCDetails -XX:+PrintTenuringDistribution
